# Aisle3

./: CI_TEST.md  README.md  REPLY_IMPLEMENTATION_SUMMARY.md  STYLING_SUMMARY.md  TESTING.md  TEST_RESULTS.md  jsconfig.json  package-lock.json  package.json  playwright.config.js  tailwind.config.js  vite.config.js  vitest.config.js
.github/workflows/: release.yml  test.yml
coverage/: coverage-final.json  index.html
coverage/Aisle3/: index.html  playwright-ct.config.js.html  playwright.config.js.html  postcss.config.js.html  svelte.config.js.html  tailwind.config.js.html  vite.config.js.html  vitest.config.js.html
coverage/Aisle3/.svelte-kit/: ambient.d.ts.html  index.html  non-ambient.d.ts.html
coverage/Aisle3/scripts/: index.html  release.cjs.html
playwright-report/: index.html
scripts/: release-check.cjs  release.cjs
src/: app.css  setupTests.js
src-tauri/: Cargo.toml  build.rs  package-lock.json  package.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/coverage/: coverage-final.json  index.html
src-tauri/icons/: icon.icns
src-tauri/src/: gmail_auth.rs  gmail_client.rs  gmail_config.rs  lib.rs  main.rs  rate_limiter.rs  secure_storage.rs
src-tauri/tests/: gmail_client_tests.rs  tauri_commands_tests.rs
src-tauri/tests/common/: mod.rs
src/lib/: utils.js
src/lib/components/: AuthSection.svelte  CompositionPreview.svelte  ConversationList.svelte  ConversationViewer.svelte  EmailApp.svelte  EmailComposer.original.svelte  EmailComposer.svelte  EmailList.svelte  EmailListVirtualized.svelte  EmailViewer.svelte  Header.svelte  InAppNotification.svelte  LoadingSpinner.svelte  PerformanceDashboard.svelte  Settings.svelte  UpdateNotification.svelte  VirtualScrollList.svelte
src/lib/services/: emailService.js  sanitizationService.js
src/lib/stores/: emailStore.js
src/lib/utils/: authManager.js  dateUtils.js  emailActions.js  emailNotificationManager.js  loading.js  notificationService.js  performance.js  performanceOptimizations.js  pollingManager.js  (+3 more)
src/routes/: +page.svelte
src/utils/: count-lines.js
(+157 files in other folders)
