[package]
name = "aisle3"
version = "0.1.5"
description = "A Gmail Client for Inbox Management"
authors = ["bryansh"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
