[package]
name = "aisle3"
version = "0.2.1"
description = "A Gmail Client for Inbox Management"
authors = ["bryansh"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
oauth2 = "4.4"
base64 = "0.22.1"
url = "2.4"
tokio = { version = "1.0", features = ["full"] }
opener = "0.6"
urlencoding = "2.1"
dirs = "5.0"
