[package]
name = "aisle3"
version = "0.3.1"
description = "A Gmail Client for Inbox Management"
authors = ["bryansh"]
edition = "2021"

[lib]
name = "aisle3"
path = "src/lib.rs"

[[bin]]
name = "aisle3"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2.0"
tauri-plugin-notification = "2.0"
keyring = "2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
oauth2 = "4.4"
base64 = "0.22.1"
url = "2.4"
tokio = { version = "1.0", features = ["full"] }
opener = "0.6"
urlencoding = "2.1"
dirs = "5.0"
dotenvy = "0.15"
# Removed webhook dependencies: warp, bytes, futures-util
# google-cloud-pubsub = "0.22"  # Available when needed for full Pub/Sub integration

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.4"
tempfile = "3.0"
assert_matches = "1.5"
chrono = { version = "0.4", features = ["serde"] }
